--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 # main links
 main:
   - title: "About"
-    url: /about/
+    #url: /about/
    - title: "Projects"
-     url: /projects/
+     #url: /projects/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
