--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 # main links
 main:
   - title: "About"
-    #url: /about/
-   - title: "Projects"
+    url: /about/
+   #- title: "Projects"
      #url: /projects/
   # - title: "Sample Posts"
   #   url: /year-archive/
