--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 # main links
 main:
-  - title: "About"
+  - title: "Home"
     url: '\index.html'
   - title: "About"
-    #url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+    url: \about\
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
