--- a/_config.yml
+++ b/_config.yml
@@ -218,20 +218,10 @@ sass:
 
 
 # Outputting
-permalink: pretty
+permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-
-# Pages permalink
-defaults:
-  -
-    scope:
-      type: "pages"
-    values:
-      permalink: /:path/:basename:output_ext
-
-
 
 
 # Plugins (previously gems:)
