added include line

--- a/_config.yml
+++ b/_config.yml
@@ -153,12 +153,12 @@ footer:
       icon: "fab fa-fw fa-instagram"
       # url:
 
-include: ['_pages']
+
 
 # Reading Files
 include:
   - .htaccess
-  - _pages
+  - ['_pages']
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
