--- a/_config.yml
+++ b/_config.yml
@@ -154,11 +154,10 @@ footer:
       # url:
 
 
-
 # Reading Files
 include:
   - .htaccess
-  - ['_pages']
+  - _pages
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
