--- a/_config.yml
+++ b/_config.yml
@@ -144,7 +144,7 @@ footer:
 # Reading Files
 include:
   - .htaccess
-  - _pages
+  - ["_pages"]
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
@@ -287,7 +287,6 @@ defaults:
       comments: # true
       share: true
       related: true
-      sitemap: true
       toc: true
 
   # _pages
@@ -297,9 +296,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-      sitemap: true
       toc: true
-
 
 
 
