--- a/_config.yml
+++ b/_config.yml
@@ -287,7 +287,7 @@ defaults:
       comments: # true
       share: true
       related: true
-      toc: true
+    
 
   # _pages
   - scope:
@@ -296,9 +296,23 @@ defaults:
     values:
       layout: single
       author_profile: true
+
+
+  # _pitches
+  - scope:
+      path: ""
+      type: pitches
+    values:
+      layout: single
+      author_profile: true
+      share: true
       toc: true
 
 
+collections:
+  pitches:
+    output: true
+    permalink: /:collection/:path/
 
 
 
