--- a/_config.yml
+++ b/_config.yml
@@ -232,10 +232,10 @@ whitelist:
   - jekyll-include-cache
 
 
-titles_from_headings:
-  enabled:     true
-  strip_title: true
-  collections: true 
+#titles_from_headings:
+#  enabled:     true
+#  strip_title: true
+#  collections: true 
 
 # Archives
 #  Type
