--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,9 +3,9 @@ main:
   - title: "About"
     url: /about/
   - title: "Pitching"
-    url: /pitches_intro/
+    url: /pitches-intro/
   - title: "Culinary"
-    url: /culinary_intro/
+    url: /culinary-intro/
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Sitemap"
