--- a/_config.yml
+++ b/_config.yml
@@ -307,6 +307,8 @@ defaults:
       author_profile: true
       share: true
       toc: true
+      sidebar:
+        nav: "docs"
 
   # _culinary
   - scope:
