--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,8 +24,8 @@ pitches:
         url: /pitches/numerical-int/
       - title: "Python Implementation"
         url: /pitches/python/
-      - title: "Examples"
-        url: /pitches/examples/
+      #- title: "Examples"
+      #  url: /pitches/examples/
   #- title: Applications of Tool
     #children:
      # - title: "Configuration"
