--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,5 @@
 # main links
+# main links
 main:
   - title: "About"
     url: /about/
@@ -24,8 +25,8 @@ pitches:
         url: /pitches/numerical-int/
       - title: "Python Implementation"
         url: /pitches/python/
-      #- title: "Examples"
-      #  url: /pitches/examples/
+     # - title: "Upgrading"
+     #   url: /docs/upgrading/
   #- title: Applications of Tool
     #children:
      # - title: "Configuration"
