--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "air" #"air", "aqua", "contrast", "dark", "dirt", "ne
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Gabe Schumm's Website"
+title                    : ""
 title_separator          : "-"
 name                     : "Gabe Schumm'"
 description              : "My portflio."
