--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -26,6 +26,10 @@ pitches:
         url: /pitches/python/
       - title: "Examples"
         url: /pitches/examples/
+  - title: Applications
+    children:
+      - title: "Pitch Tunnelling"
+        url: /pitches/tunnelling/
 
 ###
 culinary:
