--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -32,11 +32,11 @@ pitches:
         url: /pitches/tunnelling/
 
 ###
-culinary:
-  - title: Introduction
+bread:
+  - title: Gallery
     children:
-      - title: "Culinary Portfolio"
-        url: /culinary-intro/
+      - title: "Bread Baking"
+        url: /bread/
   - title: Recipes
     children:
       - title: "Recipe Introduction"
